ตรวจสอบภาพ Logo + thumbnail หน้า product.tt
- ตรวจสอบขนาดของ Logo
- ปรับขนาดภาพ thumbnail ใต้รูปใหญ่หน้า product.tt
- เพิ่ม class=last ในส่วนของ thumbnail

--- a/assets/style.css
+++ b/assets/style.css
@@ -1369,6 +1369,7 @@ form .hint_area {
 }
 #product .featured_image {
   float:left;
+  width:242px;
 }
 #product .featured_image a{
 	display:block;
@@ -1412,7 +1413,7 @@ form .hint_area {
 	padding: 0;
   margin: 10px 0 0 0;
   float: left;
-  width: 250px;
+  width: 242px;
 }
 #product .extra_images ul {
 	padding: 0;
@@ -1427,8 +1428,11 @@ form .hint_area {
 	width: 50px;
 	height: 50px;
 	background: transparent no-repeat center center;
-	margin: 0 10px 10px 0;
+	margin: 0 11px 10px 0;
 	border: 1px solid #eaeaea;
+}
+#product .extra_images .last span {
+  margin: 0 0px 10px 0;
 }
 #product .buy {
   float: left;
